# libprojfs

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  LICENSE.md  Makefile.am  NOTICE  README.md  autogen.sh  azure-pipelines.yml  config.sh.in  configure.ac  projfs.pc.in  tap-driver.sh
docker/: Dockerfile-develop  Dockerfile-distpkg  Dockerfile-fuse3  Dockerfile-integrate  Dockerfile-vfs  README.md  cibuild  project.rb  projfs  tests.rb  update-readme
docs/: .Doxyfile  build-install.md  design.md
include/: Makefile.am  config.h.in~  projfs.h  projfs_notify.h  projfs_vfsapi.h
lib/: Makefile.am  fdtable.c  fdtable.h  projfs.c  projfs_i.h  projfs_vfsapi.c
m4/: axlocal_prepend_flag.m4
script/: cibuild
t/: Makefile.am  README.md  c000-check-attrlist.t  c000-check-projlist.t  chainlint.sed  clean_test_dirs.sh  echo_attrlist.c  echo_projlist.c  get_strerror.c  t000-mirror-read.t  t001-mirror-mkdir.t  t002-mirror-write.t  t003-mirror-remove.t  t004-mirror-stat.t  t005-mirror-links.t  t006-mirror-statfs.t  t007-mirror-attrs.t  t008-mirror-perms.t  t100-fdtable-fill.t  t200-event-ok.t  t201-event-err.t  t202-event-deny.t  t203-event-null.t  t204-event-allow.t  t205-event-locking.t  t300-args-initial.t  t500-vfs-mirror-basic.t  t500-vfs-mirror-read.t  t501-vfs-mirror-mkdir.t  t502-vfs-mirror-write.t  t503-vfs-mirror-remove.t  t600-projection-dirs.t  t700-vfs-event-ok.t  t701-vfs-event-err.t  t702-vfs-event-deny.t  t703-vfs-event-null.t  t704-vfs-event-allow.t  test-lib-event.sh  test-lib-functions.sh  test-lib.sh  (+13 more)
t/c000/: badquotes1.list  badquotes2.list  badquotes3.list  empty.msg  empty.out  file.echo  ignore.echo  mode.echo  quotes.echo  quotes.list  simple.echo  simple.out  size.echo
t/t000/: ls.d1  ls.d2  ls.target
t/t001/: sort.source  sort.target
t/t003/: sort.source
t/t500/: nf1.txt  sort.source
t/t503/: sort.target
t/t600/: ls.upper
